# SpeedCameraPi

./: .clang-format  .gitignore  .prettierrc  Algorithm_2image__allign_2Enum_8hpp.html  CMakeLists.txt  D__Hough_8cpp.html  D__Hough_8hpp.html  D__Line_8cpp.html  D__Line_8hpp.html  D__OpticalFlow_8cpp.html  D__OpticalFlow_8hpp.html  DataStruct_8hpp.html  DescriptorMatcher_8cpp.html  DescriptorMatcher_8hpp.html  Doxyfile  Event__Calibration_8hpp.html  Event__CaptureImage_8cpp.html  Event__CaptureImage_8hpp.html  Event__ChangePanel_8cpp.html  Event__ChangePanel_8hpp.html  Event__Hough_8cpp.html  Event__Hough_8hpp.html  Event__LoadImage_8cpp.html  Event__LoadImage_8hpp.html  Event__ProcessImage_8cpp.html  Event__ProcessImage_8hpp.html  Event__Speed_8cpp.html  Event__Speed_8hpp.html  Event__UpdateImage_8cpp.html  Event__UpdateImage_8hpp.html  FeatureDetector_8cpp.html  FeatureDetector_8hpp.html  Homography_8cpp.html  Homography_8hpp.html  IDGenerator_8hpp.html  ImageAlignment_8cpp-example.html  ImageUtils_8cpp.html  ImageUtils_8hpp.html  ObjectDetection_8cpp-example.html  ObjectDetection_8cpp.html  (+688 more)
.github/workflows/: main.yml
Assets/: icons8-info-24.ico:Zone.Identifier  icons8-setting-24.ico:Zone.Identifier  thblogo.png:Zone.Identifier
Docs/: CompilingProgramm.md  DoxygenLayout.xml  GettingStarted.html  SpeedCameraPi.md  doxygen-awesome-sidebar.css  doxygen-awesome.css
Docs/markdown/: CompilingApplication.md  CompilingProgramm.md  ImageAllignment.md  InstallingRequiredDependency.md  LineDetection.md  Manual.md  ObjectDetection.md  SpeedCalculation.md  SpeedCameraPi.md  Theory.md  UserManual.md  UsingTheApp.md  YourOwn.md  developmentSetup.md  getting_started.md  index.md  literatur.bib
OLD/: main2.cpp
example/Data/: straight2.h264
example/FileReader/: fileReader.cpp
example/ImageAlignment/: CMakeLists.txt  ImageAlignment.cpp  ImageAlignment_old.cpp
example/ObjectDetection/: CMakeLists.txt  objectDetection.cpp
include/Controller/: BaseController.hpp  CalibrationController.hpp  CaptureController.hpp  ColorCalibrationController.hpp  ControllerFactory.hpp  DistanceCalibrationController.hpp  HorizontalCalibrationController.hpp  LaneCalibrationController.hpp  LaneManualCalibrationController.hpp  ManualCalibrationController.hpp  ResultController.hpp  RoiController.hpp  TrimDataController.hpp
include/Event/: Event.hpp  Event_Calibration.hpp  Event_Capture.hpp  Event_CaptureImage.hpp  Event_ChangePanel.hpp  Event_Error.hpp  Event_Hough.hpp  Event_LoadImage.hpp  Event_Preview.hpp  Event_ProcessImage.hpp  Event_Replay.hpp  Event_RequestUpdateState.hpp  Event_Roi.hpp  Event_SaveData.hpp  Event_Speed.hpp  Event_SwitchMode.hpp  Event_UpdateImage.hpp  Event_UpdatePreview.hpp  Event_UpdateSpeed.hpp  Event_UpdateState.hpp  Event_UpdateStatus.hpp  Temp.hpp  UpdateImageEvent.hpp
include/Model/: AllignData.hpp  AppState.hpp  CalibrationData.hpp  CalibrationModel.hpp  CaptureData.hpp  CaptureModel.hpp  Enum.hpp  ExtraModel.hpp  Model.hpp  ModelEnum.hpp  ModelFactory.hpp  ResultData.hpp  RoiModel.hpp  SessionData.hpp  SharedModel.hpp  SharedResource.hpp  TrackingData.hpp
include/Thread/: CaptureThread.hpp  DemoThread.hpp  ObjectDetectionThread.hpp  SIFTTask.hpp  Task.hpp  ThreadPool.hpp  Thread_Base.hpp  Thread_CalibPreview.hpp  Thread_CalibPreviewCapture.hpp  Thread_Calibration.hpp  Thread_CalibrationCamera.hpp  Thread_CalibrationCapture.hpp  Thread_CalibrationPreviewCamera.hpp  Thread_CalibrationPreviewCapture.hpp  Thread_CameraPreview.hpp  Thread_Capture.hpp  Thread_Capture2.hpp  Thread_CapturePreview.hpp  Thread_ColorCalib.hpp  Thread_ColorCalibPreview.hpp  Thread_ColorCalibration.hpp  Thread_ColorCalibrationPreview.hpp  Thread_Controller.hpp  Thread_DistanceCalibrationCamera.hpp  Thread_DistanceCalibrationCapture.hpp  Thread_Factory.hpp  Thread_HorizontalCalibrationCamera.hpp  Thread_HorizontalCalibrationCapture.hpp  Thread_Hough.hpp  Thread_ID.hpp  Thread_LaneCalibrationCamera.hpp  Thread_LaneCalibrationCapture.hpp  Thread_LaneManualCalibrationCamera.hpp  Thread_LaneManualCalibrationCapture.hpp  Thread_LoadCapture.hpp  Thread_LoadFile.hpp  Thread_ManualCalib.hpp  Thread_ManualCalibCapture.hpp  Thread_ManualCalibrationCamera.hpp  Thread_ManualCalibrationCapture.hpp  (+9 more)
include/UI/: MainFrame.hpp  Panel2.hpp
include/Utils/: AppConfig.hpp  BufferedBitmap.hpp  CommonUtils.hpp  DataStruct.hpp  Enum.hpp  ImageUtils.hpp  Logger.hpp  StreamBuff.hpp  fileAVI.hpp  fileH264.hpp  fileWR.hpp  wxUtils.hpp
scripts/Installation/: DI_Script1.sh  DI_Script2.sh  DI_Script3.sh  DI_Script4.sh  Hotspot.sh  Shutdown.sh  Startup.py  Startup.sh  Touchscreen.sh
scripts/crosscompile/: Host_cvcompile.py  Host_cvinstall.py  Host_postSetup.py  Host_setup.py  Host_setup.sh  Host_syncwithTarget.py  PI.cmake  Ssymlinker.py  SyncWTarget.py  Target_Ssymlinker.py  Target_cvinstall.py  Target_setup.py  cUtils.py  fix_jconfig.py  setup_ssh.py  sysroot-relativelinks.py
scripts/debug/: debu.sh  gdblaunch.sh  launch.json  launch.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enums_1.js  enums_2.js  (+45 more)
src/: BufferedBitmap.cpp  BufferedBitmap.hpp  CMakeLists.txt  MainFrame.cpp  MainFrame.hpp  OtherFrame.cpp  SelectroiPanel.Button.cpp  SelectroiPanel.Button.hpp  SelectroiPanel.Image.cpp  SelectroiPanel.Image.hpp  SelectroiPanel.cpp  SelectroiPanel.hpp  main.cpp
src/Controller/: BaseController.cpp  CalibrationController.cpp  CaptureController.cpp  ColorCalibrationController.cpp  ControllerFactory.cpp  DistanceCalibrationController.cpp  HorizontalCalibrationController.cpp  LaneCalibrationController.cpp  LaneManualCalibrationController.cpp  ResultController.cpp  (+3 more)
temp/: OtherFrame.hpp  main3.cpp
test/: Test.cpp
(+1114 files in other folders)
